--- a/src/ScrubJay.Reflection.csproj
+++ b/src/ScrubJay.Reflection.csproj
@@ -50,6 +50,7 @@
         <Using Include="System.Runtime.InteropServices"/>
         <Using Include="System.Collections"/>
         <Using Include="System.Reflection"/>
+        <Using Include="System.Reflection.Emit"/>
         
         <Using Include="ScrubJay.Enums"/>
         <Using Include="ScrubJay.Utilities"/>
@@ -71,6 +72,15 @@
         <PackageReference Include="System.Memory" Version="4.5.5">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="System.Reflection.Emit" Version="4.7.0">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="System.Reflection.Emit.ILGeneration" Version="4.7.0">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.1' ">
@@ -87,14 +97,14 @@
         <PackageReference Include="InlineIL.Fody" Version="1.8.0" >
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" >
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="PolySharp" Version="1.14.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-    </ItemGroup>
 
-    <ItemGroup>
-      <Folder Include="Utilities\" />
     </ItemGroup>
     <PropertyGroup>
         <PolySharpUsePublicAccessibilityForGeneratedTypes>true</PolySharpUsePublicAccessibilityForGeneratedTypes>
