--- a/src/ScrubJay.Reflection.csproj
+++ b/src/ScrubJay.Reflection.csproj
@@ -56,6 +56,7 @@
         <Using Include="ScrubJay.Enums"/>
         <Using Include="ScrubJay.Extensions"/>
         <Using Include="ScrubJay.Utilities"/>
+        <Using Include="ScrubJay.GlobalHelper" Static="true"/>
 
         <Using Include="ScrubJay.Reflection.Extensions"/>
         <Using Include="ScrubJay.Reflection.Utilities"/>
