--- a/src/ScrubJay.Reflection.csproj
+++ b/src/ScrubJay.Reflection.csproj
@@ -1,31 +1,41 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <RootNamespace>ScrubJay.Reflection</RootNamespace>
+        <AssemblyName>ScrubJay.Reflection</AssemblyName>
+        
         <TargetFrameworks>
-            <!-- All supported .Net Core versions ~~ https://dotnet.microsoft.com/en-us/platform/support/policy/dotnet-core -->
-            net8.0;net7.0;net6.0;
-            <!-- Support for both .Net Standard versions ~~ .Net Standard 2.0 so we can be consumed by Source Generators, which are currently limited to that version -->
-            netstandard2.1;netstandard2.0;
-            <!-- Only supported version of .Net Framework ~~https://dotnet.microsoft.com/en-us/platform/support/policy/dotnet-framework -->
+            <!-- Only supported version of .Net Framework -->
+            <!-- https://dotnet.microsoft.com/en-us/platform/support/policy/dotnet-framework -->
             net481;
+            <!-- Support for both .Net Standard versions -->
+            <!-- .Net Standard 2.0 so we can be consumed by Source Generators, which are currently limited to that version -->
+            netstandard2.0;netstandard2.1;
+            <!-- All supported .Net Core versions -->
+            <!-- https://dotnet.microsoft.com/en-us/platform/support/policy/dotnet-core -->
+            net6.0;net7.0;net8.0;
         </TargetFrameworks>
+
+        <!-- Always use the latest features -->
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
-        <RootNamespace>ScrubJay.Reflection</RootNamespace>
-        <AssemblyName>ScrubJay.Reflection</AssemblyName>
+        <!-- Static Code Analysis -->
+        <AnalysisLevel>latest</AnalysisLevel>
+        <AnalysisMode>All</AnalysisMode>
+        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 
         <!-- Setup NuGet -->
         <IsPackable>true</IsPackable>
-        <EnablePackageValidation>true</EnablePackageValidation>
-        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+        <EnablePackageValidation>false</EnablePackageValidation>
+        
         <!-- NuGet Package Information -->
         <Title>ScrubJay Reflection Library</Title>
         <Authors>Timothy Jay</Authors>
         <Description>
-            
+            A reflection helper
         </Description>
         <RepositoryUrl>https://github.com/Dissolution/ScrubJay.Reflection</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
@@ -36,8 +46,20 @@
         <PackageVersion>0.0.1-alpha</PackageVersion>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+        <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <!-- Create NuGet Package -->
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <!-- Generate XML documentation -->
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    </PropertyGroup>
+    
     <!-- NuGet -->
-    <ItemGroup>
+    <ItemGroup Condition=" '$(Configuration)' == 'Release' ">
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
         <None Include="..\LICENSE.txt" Pack="true" PackagePath="\"/>
         <None Include="..\jay.png" Pack="true" PackagePath="\"/>
@@ -56,32 +78,27 @@
         <Using Include="ScrubJay.Enums"/>
         <Using Include="ScrubJay.Extensions"/>
         <Using Include="ScrubJay.Utilities"/>
+        <Using Include="ScrubJay.Functional"/>
+        <Using Include="ScrubJay.Buffers"/>
+        <Using Include="ScrubJay.Collections"/>
+        <Using Include="ScrubJay.Validation"/>
         <Using Include="ScrubJay.GlobalHelper" Static="true"/>
 
+        <Using Include="ScrubJay.Text"/>
+        <Using Include="ScrubJay.Text.Extensions"/>
+        
         <Using Include="ScrubJay.Reflection.Extensions"/>
         <Using Include="ScrubJay.Reflection.Utilities"/>
     </ItemGroup>
-
-    <!-- Project References -->
-    <ItemGroup>
-        <ProjectReference Include="..\..\Scrubjay.Core\src\ScrubJay.Core.csproj" />
-
-        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-            <_Parameter1>$(MSBuildProjectName).ConsoleApp</_Parameter1>
-        </AssemblyAttribute>
-    </ItemGroup>
     
-    <!-- NuGet Packages -->
-    <ItemGroup Condition=" '$(TargetFramework)' == 'net481' ">
+    <!-- Need System.Memory for older frameworks -->
+    <ItemGroup Condition=" '$(TargetFramework)' == 'net481' Or '$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'netstandard2.1'">
         <PackageReference Include="System.Memory" Version="4.5.5">
-<!--            <PrivateAssets>all</PrivateAssets>-->
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-        <PackageReference Include="System.Memory" Version="4.5.5">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
         <PackageReference Include="System.Reflection.Emit" Version="4.7.0">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
@@ -93,31 +110,46 @@
         </PackageReference>
     </ItemGroup>
 
-    <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.1' ">
-        <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-    </ItemGroup>
-
     <ItemGroup>
-        <PackageReference Include="Dunet" Version="1.11.2" />
-        <PackageReference Include="Fody" Version="6.8.0">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="InlineIL.Fody" Version="1.8.0" >
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" >
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="PolySharp" Version="1.14.1">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="ScrubJay.Core" Version="0.4.1-alpha"/>
+        <PackageReference Include="ScrubJay.Text" Version="0.0.1-alpha"/>
 
+        <PackageReference Include="Dunet" Version="1.11.2" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Fody" Version="6.8.2">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="InlineIL.Fody" Version="1.9.0">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="JetBrains.Annotations" Version="2024.2.0">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
-    <PropertyGroup>
-        <PolySharpUsePublicAccessibilityForGeneratedTypes>true</PolySharpUsePublicAccessibilityForGeneratedTypes>
-    </PropertyGroup>
+
+    <!-- Static Code Analyzers -->
+    <ItemGroup>
+        <PackageReference Include="Meziantou.Analyzer" Version="2.0.169">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="9.32.0.97167">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Roslynator.Analyzers" Version="4.12.7">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
+
+    <!-- Expose our internals to our tests and other trusted ScrubJay libraries -->
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>ScrubJay.Reflection.ConsoleApp</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 </Project>
