--- a/src/ScrubJay.Reflection.csproj
+++ b/src/ScrubJay.Reflection.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <RootNamespace>ScrubJay.Reflection</RootNamespace>
         <AssemblyName>ScrubJay.Reflection</AssemblyName>
-        
+
         <TargetFrameworks>
             <!-- Only supported version of .Net Framework -->
             <!-- https://dotnet.microsoft.com/en-us/platform/support/policy/dotnet-framework -->
@@ -27,10 +27,15 @@
         <AnalysisMode>All</AnalysisMode>
         <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 
+        <NoWarn>
+            $(NoWarn);
+            CA1062;         <!-- External Nullability Checks -->
+        </NoWarn>
+
         <!-- Setup NuGet -->
         <IsPackable>true</IsPackable>
         <EnablePackageValidation>false</EnablePackageValidation>
-        
+
         <!-- NuGet Package Information -->
         <Title>ScrubJay Reflection Library</Title>
         <Authors>Timothy Jay</Authors>
@@ -57,7 +62,7 @@
         <!-- Generate XML documentation -->
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
-    
+
     <!-- NuGet -->
     <ItemGroup Condition=" '$(Configuration)' == 'Release' ">
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
@@ -74,7 +79,7 @@
         <Using Include="System.Collections"/>
         <Using Include="System.Reflection"/>
         <Using Include="System.Reflection.Emit"/>
-        
+
         <Using Include="ScrubJay.Comparison"/>
         <Using Include="ScrubJay.Enums"/>
         <Using Include="ScrubJay.Extensions"/>
@@ -87,11 +92,11 @@
 
         <Using Include="ScrubJay.Text"/>
         <Using Include="ScrubJay.Text.Extensions"/>
-        
+
         <Using Include="ScrubJay.Reflection.Extensions"/>
         <Using Include="ScrubJay.Reflection.Utilities"/>
     </ItemGroup>
-    
+
     <!-- Need System.Memory for older frameworks -->
     <ItemGroup Condition=" '$(TargetFramework)' == 'net481' Or '$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'netstandard2.1'">
         <PackageReference Include="System.Memory" Version="4.5.5">
@@ -115,7 +120,7 @@
         <PackageReference Include="ScrubJay.Core" Version="0.4.1-alpha"/>
         <PackageReference Include="ScrubJay.Text" Version="0.0.1-alpha"/>
 
-        <PackageReference Include="Dunet" Version="1.11.2" />
+        <PackageReference Include="Dunet" Version="1.11.2"/>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
