--- a/src/ScrubJay.Reflection.csproj
+++ b/src/ScrubJay.Reflection.csproj
@@ -30,6 +30,7 @@
         <NoWarn>
             $(NoWarn);
             CA1062;         <!-- External Nullability Checks -->
+            S3011;          <!-- BindingFlags bypass visibility -->
         </NoWarn>
 
         <!-- Setup NuGet -->
@@ -72,6 +73,7 @@
 
     <!-- Global Usings -->
     <ItemGroup>
+        <Using Include="System.Diagnostics"/>
         <Using Include="System.Diagnostics.CodeAnalysis"/>
         <Using Include="System.Numerics"/>
         <Using Include="System.Runtime.CompilerServices"/>
@@ -95,6 +97,8 @@
 
         <Using Include="ScrubJay.Reflection.Extensions"/>
         <Using Include="ScrubJay.Reflection.Utilities"/>
+        
+        <Using Include="JetBrains.Annotations"/>
     </ItemGroup>
 
     <!-- Need System.Memory for older frameworks -->
@@ -117,8 +121,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="ScrubJay.Core" Version="0.4.1-alpha"/>
-        <PackageReference Include="ScrubJay.Text" Version="0.0.1-alpha"/>
+        <PackageReference Include="ScrubJay.Core" Version="0.5.0-alpha"/>
+        <PackageReference Include="ScrubJay.Text" Version="0.0.2-alpha"/>
 
         <PackageReference Include="Dunet" Version="1.11.2"/>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0">
@@ -146,7 +150,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Roslynator.Analyzers" Version="4.12.7">
+        <PackageReference Include="Roslynator.Analyzers" Version="4.12.8">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -157,5 +161,8 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
             <_Parameter1>ScrubJay.Reflection.ConsoleApp</_Parameter1>
         </AssemblyAttribute>
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Text\" />
     </ItemGroup>
 </Project>
